Dependency Injection and Room Simple Implementation
Dependency injection is working with room and live data implementation.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="abhishekdewan.com.androidtemplate.features.testfeature.MainActivity">
+    tools:context="com.abhishek.androidtemplate.features.testfeature.MainActivity">
 
 </android.support.constraint.ConstraintLayout>
